--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
     "@tailwindcss/vite": "^4.1.3",
     "dotenv": "^16.4.7",
     "graphql": "^16.10.0",
+    "mobx": "^6.13.7",
+    "mobx-react": "^9.2.0",
     "react": "^19.0.0",
     "react-awesome-reveal": "^4.3.1",
     "react-dom": "^19.0.0",
+    "react-responsive": "^10.0.1",
     "react-router-dom": "^7.5.1",
     "tailwindcss": "^4.1.3"
   },
