--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mobx-react": "^9.2.0",
     "react": "^19.0.0",
     "react-awesome-reveal": "^4.3.1",
+    "react-cookie-consent": "^9.0.0",
     "react-dom": "^19.0.0",
     "react-responsive": "^10.0.1",
     "react-router-dom": "^7.5.1",
